Added explanatory text for Try button.

--- a/sudoku/templates/sudoku/sudoku_detail.html
+++ b/sudoku/templates/sudoku/sudoku_detail.html
@@ -91,6 +91,18 @@
         </li>
     </ul>
 
+    <h2>How the Try button works</h2>
+
+    <p>
+        The Try button is very useful for hard Sudoku problems. If you get to a
+        point where you can't make progress without trying one of, say, two
+        options in a cell, click the Try button. Then try one of the options. If
+        it turns out to be right and you solve the puzzle, then that's it. But
+        if you reach a broken position, click the button again (which is now
+        called Untry). It will restore the position to where you were before you
+        tried the failed option. Now you can try the second option.
+    </p>
+
     <h2>Publishing schedule</h2>
 
     <ul>
@@ -105,7 +117,8 @@
 
     <p>
         The puzzles are computer generated. Sometimes an easy puzzle may be more
-        difficult than it should be and vice-versa.
+        difficult than it should be and vice-versa. There is exactly one
+        solution to a puzzle.
     </p>
     <p>
         The puzzles published on Saturdays and Sundays are very difficult and
