Updated home page menu.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -33,6 +33,11 @@
             </a>
         </li>
         <li>
+            <a href="tac.simhub.online">
+                Archived <b>Treatment Action Campaign</b> website as of October 2008
+            </a>
+        </li>
+        <li>
             <a href="{% url "gambler:gambler_form" %}">
                 Gambler: Test simulation to make sure this website works
             </a>
