Updated home page menu.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -33,7 +33,7 @@
             </a>
         </li>
         <li>
-            <a href="tac.simhub.online">
+            <a href="https://tac.simhub.online">
                 Archived <b>Treatment Action Campaign</b> website as of October 2008
             </a>
         </li>
