Added colliding balls to menu.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -33,6 +33,11 @@
             </a>
         </li>
         <li>
+            <a href="https://toys.simhub.online/balls.html">
+                Balls on plane
+            </a>
+        </li>
+        <li>
             <a href="https://tac.simhub.online">
                 Archived <b>Treatment Action Campaign</b> website as of October 2008
             </a>
