Added colliding balls to menu.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -34,7 +34,7 @@
         </li>
         <li>
             <a href="https://toys.simhub.online/balls.html">
-                Balls on plane
+                Balls on a plane
             </a>
         </li>
         <li>
