Added quackdown to menu.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -52,6 +52,11 @@
                 Sudoku: For your relaxation
             </a>
         </li>
+        <li>
+            <a href="https://quackdown.simhub.online/">
+                Quackdown: retired website that used to debunk nonsense
+            </a>
+        </li>
     </ul>
 
 
