--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -10,8 +10,8 @@
 
     <ul>
         <li>
-            <a href="https://pandemic.simhub.online/">
-                Pandemic: A simple model of a global infectious disease
+            <a href="https://epi.simhub.online/">
+                Introduction to modelling epidemics and infectious diseases
             </a>
         </li>
         <li>
