Added SA Human Rights Delegation page.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Simulation Hub Home
+   Simhub
 {% endblock %}
 
 {% block content %}
@@ -55,6 +55,11 @@
         <li>
             <a href="https://quackdown.simhub.online/">
                 Quackdown: retired website that used to debunk nonsense
+            </a>
+        </li>
+        <li>
+            <a href="{% static '/pages/sahrd2008.html' %}">
+                South African Human Rights Delegation to Israel and the Occupied Palestinian Territories 2008
             </a>
         </li>
     </ul>
