Added collection of reading on Israel v Gaza.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -62,6 +62,11 @@
                 South African Human Rights Delegation to Israel and the Occupied Palestinian Territories 2008
             </a>
         </li>
+        <li>
+            <a href="https://www.simhub.online/media/IsraelPalestine/IsraelPalestineReading.html">
+                Selected reading following the events in Israel, Gaza and the West Bank of 7 October 2023
+            </a>
+        </li>
     </ul>
 
 
